Fix an error shown when an execution profile is instantiated.